2001-11-25  Dekel Tsur  <dekelts@tau.ac.il>

	* src/buffer.C (makeLaTeXFile): Use the twoside option for the geometry
	package when necessary.

2001-02-21  Dekel Tsur  <dekelts@tau.ac.il>

	* src/frontends/xforms/FormDocument.C (checkMarginValues):
 	Activate "use geometry" button if using custom paper size/margin.

2001-01-24  Dekel Tsur  <dekelts@tau.ac.il>

	* lib/configure.m4: Add a check for dvipdfm

2001-01-23  Dekel Tsur  <dekelts@tau.ac.il>

	* src/buffer.C:
	* src/tex-strings.C: Add support for ae fonts

2001-11-23  Panayotis "PAP" Papasotiriou  <papasot@physics.upatras.gr>

	* lib/templates/kluwer.lyx: 
	* lib/layouts/kluwer.layout: new textclass for journals edited by
	Kluwer.  

	* lib/doc/LaTeXConfig.lyx.in: update

2001-11-22  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/text2.C (RemoveRow): 
	* src/text.C (SetHeightOfRow): remove bogus call to GetRow.

2001-10-24  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* lib/examples/it_splash.lyx: update from Claudio Coco

2001-10-22  Adrien Rebollo <adrien.rebollo@gmx.fr>

	* lib/kbd/iso8859-1.cdef: overhaul
	* lib/kbd/iso8859-3.cdef:
	* lib/kbd/iso8859-4.cdef:
	* lib/kbd/iso8859-15.cdef: new files
	* src/lyxrc.C (set_font_norm_type): recognizes latin3, 4 and 9
	* src/lyxrc.h: added ISO_8859_3, ISO_8859_4 and ISO_8859_15
	* src/paragraph.C (SimpleTeXSpecialChars): protects math-only
	characters in latin9 too
	* src/frontends/xforms/FormDocument.C (build): added latin3, latin4
	and latin9 options
	* src/insets/insetquotes.C (DispString): beautifying single and
	double quotes in latin1, 3, 4 and 9
    
2001-10-19  Juergen Vigna  <jug@sad.it>

	* src/insets/insettext.C (SetFont): fixed problem of marking
	document "changed" when only changing the font of an empty
	paragraph.

2001-10-17  Kayvan A. Sylvan  <kayvan@sylvan.com>

	* development/lyx.spec.in: overhaul

2001-10-15  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
